# myshader

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  myshader.cpp  myshader.h  shader.fs  shader.h  stb_image.h
src/: glad.c
