cmake_minimum_required(VERSION 3.10)
project(shader)
set(CMAKE_CXX_STANDARD 17)

set(GLAD_DIR "D:/lib/glad")
set(GLFW_DIR "D:/lib/glfw")
find_package(OpenGL REQUIRED)
include_directories(${GLAD_DIR}/include ${GLFW_DIR}/include)
include_directories("D:/lib/glm")
add_executable(shader main2.cpp src/glad.c shader.h stb_image.h)
link_directories(${GLFW_DIR}/lib)
target_link_libraries(shader libglfw3dll.a)
configure_file(shader.vs shader.vs COPYONLY)
configure_file(shader.fs shader.fs COPYONLY)
file(COPY container.jpg wall.jpg awesomeface.png DESTINATION ${CMAKE_BINARY_DIR})
